--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start --port=3001",
+    "start": "npm run build && next start --port=3001",
     "lint": "next lint"
   },
   "dependencies": {
